Enhance data ingestion and processing: update README, add Kafka producer, refine settings, and introduce JSON schema

--- a/config/settings.yaml
+++ b/config/settings.yaml
@@ -1,6 +1,6 @@
 stations:
-  - 100968 # Helsinki-Vantaan lentoasema
-  - 100691 # Espoo Leppävaara Läkkisepänkuja
+  - 100971 # Helsinki Kaisaniemi
+  - 101939 # Sodankylä Luosto
   - 101632 # Joensuu Linnunlahti
   - 101786 # Oulu Lentoasema
-  - 103098 # Tampere Linja-autoasema
+  - 101311 # Tampere Siilinkari
